Fix Docker build for Render